added smart move