@@ -2,8 +2,8 @@ import kotlin.Pair;
 import kotlin.Triple;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.LinkedList;
-import java.util.List;
 
 class Bot {
 
@@ -18,6 +18,7 @@ class Bot {
             buildAnotherMoves();
             completeMoves();
         }
+        setPointsOnBranches(startField);
     }
 
     private LinkedList<Branch> buildFirstMoves(Field startField){
@@ -40,8 +41,8 @@ class Bot {
                             } else continue;
                         }
 
-                        ArrayList<Pair<Cell, Cell>> list = new ArrayList<>();
-                        Pair<Cell, Cell> move = new Pair<>(f.cell(column1, row1), f.cell(column2, row2));
+                        ArrayList<Pair<String, String>> list = new ArrayList<>();
+                        Pair<String, String> move = new Pair<>(f.cell(column1, row1).pos(), f.cell(column2, row2).pos());
                         list.add(move);
                         Branch branch = new Branch(list, f);
 
@@ -63,30 +64,30 @@ class Bot {
         return branches1;
     }
 
-    void completeMoves(){
+    private void completeMoves(){
         for (;;){
             int changes = 0;
             int i = 0;
             for (; i < branches.size(); i++) {
 
-                ArrayList<Triple<Cell, Cell, Field>> leaves = new ArrayList<>();
-                Cell cell1 = branches.get(i).getListOfMoves().get(branches.get(i).getListOfMoves().size()-1).getSecond();
+                ArrayList<Triple<String, String, Field>> leaves = new ArrayList<>();
+                String cell1 = branches.get(i).getListOfMoves().get(branches.get(i).getListOfMoves().size()-1).getSecond();
 
                 for (int row2 = 0; row2 < 8; row2++) {
                     for (int column2 = 0; column2 < 8; column2++) {
 
                         Field f = branches.get(i).getLastField().copy();
-                        Pair<String, Integer> info = f.move(f.cell(cell1.column, cell1.row), f.cell(column2, row2));
+                        Pair<String, Integer> info = f.move(cell1, f.cell(column2, row2).pos());
                         if (info.getFirst() != null) {
                             continue;
                         }
-                        Triple<Cell, Cell, Field> leaf = new Triple<>(cell1, f.cell(column2, row2), f.copy());
+                        Triple<String, String, Field> leaf = new Triple<>(cell1, f.cell(column2, row2).pos(), f.copy());
                         leaves.add(leaf);
                     }
                 }
 
                 int k = 0;
-                for (Triple<Cell,Cell,Field> leaf : leaves){
+                for (Triple<String,String,Field> leaf : leaves){
                     Branch newBranch = branches.get(i+k).copy();
                     newBranch.getListOfMoves().add(new Pair<>(leaf.getFirst(), leaf.getSecond()));
                     newBranch.setLastField(leaf.getThird());
@@ -105,12 +106,12 @@ class Bot {
         }
     }
 
-    void buildAnotherMoves(){
+    private void buildAnotherMoves(){
         int i = 0;
         for (; i < branches.size(); i++){
 
             if (branches.get(i).isFinished()) continue;
-            ArrayList<Triple<Cell, Cell, Field>> leaves = new ArrayList<>();
+            ArrayList<Triple<String, String, Field>> leaves = new ArrayList<>();
 
             for (int row1 = 0; row1 < 8; row1++) {
                 for (int column1 = 0; column1 < 8; column1++) {
@@ -123,10 +124,9 @@ class Bot {
                                 if (!info.getFirst().equals(Field.blackWin) && !info.getFirst().equals(Field.whiteWin)) {
                                     continue;
                                 }
-                                // else {                                                                       !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
                             }
 
-                            Triple<Cell, Cell, Field> leaf = new Triple<>(f.cell(column1, row1), f.cell(column2, row2), f.copy());
+                            Triple<String, String, Field> leaf = new Triple<>(f.cell(column1, row1).pos(), f.cell(column2, row2).pos(), f.copy());
                             leaves.add(leaf);
                         }
                     }
@@ -134,7 +134,7 @@ class Bot {
             }
 
             int k = 0;
-            for (Triple<Cell,Cell,Field> leaf : leaves){
+            for (Triple<String,String,Field> leaf : leaves){
                 Branch newBranch = branches.get(i+k).copy();
                 newBranch.getListOfMoves().add(new Pair<>(leaf.getFirst(), leaf.getSecond()));
                 newBranch.setLastField(leaf.getThird());
@@ -148,11 +148,11 @@ class Bot {
         }
     }
 
-    private void setPointsOnBranches(Field startField){
+    void setPointsOnBranches(Field startField){
         for (Branch branch : branches) {
             int points = 0;
             Field temp = startField.copy();
-            for (Pair<Cell, Cell> currentMove : branch.getListOfMoves()){
+            for (Pair<String, String> currentMove : branch.getListOfMoves()){
                 Turn currentTurn = temp.copy().getTurn();
                 Pair<String, Integer> info = temp.move(currentMove.getFirst(), currentMove.getSecond());
                 if (currentTurn == botColor) {
@@ -161,65 +161,14 @@ class Bot {
                     points -= info.getSecond();
                 }
             }
+            branch.setPoints(points);
         }
     }
 
-    String randomMove1(Field field) {
-        List<Pair<Cell, Cell>> moves = new ArrayList<>();
-        boolean finish = false;
-
-        for (int row1 = 0; row1 < 8; row1++){
-            for (int column1 = 0; column1 < 8; column1++){
-                for (int row2 = 0; row2 < 8; row2++){
-                    for (int column2 = 0; column2 < 8; column2++){
-
-                        if ((row1+column1)%2 != 0 || (row2+column2)%2 != 0)
-                            continue;
-
-                        Field temp = field.copy();
-                        String message = temp.move(temp.cell(column1, row1), temp.cell(column2, row2)).getFirst();
-                        if (message != null) {
-                            if (message.equals(Field.blackWin) || message.equals(Field.whiteWin)) {
-                                moves.add(new Pair<>(field.cell(column1, row1), field.cell(column2, row2)));
-                                finish = true;
-                                break;
-                            } else {
-                                continue;
-                            }
-                        }
-                        moves.add(new Pair<>(field.cell(column1, row1), field.cell(column2, row2)));
-                    }
-                    if (finish) break;
-                }
-                if (finish) break;
-            }
-            if (finish) break;
-        }
-
-        if (!moves.isEmpty()) {
-            int i = (int) (Math.random() * moves.size());
-            Pair<Cell, Cell> lastMove = moves.get(i);
-            System.out.println(lastMove.getFirst().pos() + " -> " + lastMove.getSecond().pos());
-            return field.move(lastMove.getFirst().pos(), lastMove.getSecond().pos()).getFirst();
-        } else {
-            switch (field.getPlayer()){
-                case WHITE:
-                    return Field.whiteWin;
-                case BLACK:
-                    return Field.blackWin;
-            }
-        }
-
-        return "";
-    }
-
-    String randomMove(Field field) {
-        if (!branches.isEmpty()) {
-            int i = (int) (Math.random() * branches.size());
-            Pair<Cell, Cell> lastMove = branches.get(i).getListOfMoves().get(0);
-            System.out.println(lastMove.getFirst().pos() + " -> " + lastMove.getSecond().pos());
-            return field.move(lastMove.getFirst().pos(), lastMove.getSecond().pos()).getFirst();
-        } else {
+    String smartMove(Field field) {
+        Pair<String, String> smartMove = resultOfEvaluation(branches);
+        if (smartMove != null) return field.move(smartMove.getFirst(), smartMove.getSecond()).getFirst();
+        else {
             switch (field.getPlayer()) {
                 case WHITE:
                     return Field.whiteWin;
@@ -227,8 +176,47 @@ class Bot {
                     return Field.blackWin;
             }
         }
-
         return "";
+    }
+
+    private Pair<String, String> resultOfEvaluation(LinkedList<Branch> branches) {
+        if (branches.isEmpty()) return null;
+
+        ArrayList<Pair<String, String>> uniqueFirstMoves = new ArrayList<>();
+        for (Branch branch : branches) {
+            if (!uniqueFirstMoves.contains(branch.getListOfMoves().get(0))){
+                uniqueFirstMoves.add(branch.getListOfMoves().get(0));
+            }
+        }
+        if (uniqueFirstMoves.size() == 1) return uniqueFirstMoves.get(0);
+
+        ArrayList<Double> arrayOfPoints = new ArrayList<>();
+        int i = 0;
+        double sum = 0;
+        int amount = 0;
+        for (Branch branch : branches) {
+            if (!branch.getListOfMoves().get(0).equals(uniqueFirstMoves.get(i))) {
+                assert amount != 0;
+                arrayOfPoints.add(i, sum / amount);
+                i++;
+                sum = 0;
+                amount = 0;
+            }
+            sum += branch.getPoints();
+            amount++;
+        }
+
+        double max = arrayOfPoints.get(0);
+        for (int k = 1; k < arrayOfPoints.size(); k++){
+            if (arrayOfPoints.get(k) > max) max = arrayOfPoints.get(k);
+        }
+        ArrayList<Integer> indexes = new ArrayList<>();
+        for (int k = 0; k < arrayOfPoints.size(); k++){
+            if (arrayOfPoints.get(k) == max)
+                indexes.add(k);
+        }
+        i = (int) (Math.random() * indexes.size());
+        return uniqueFirstMoves.get(indexes.get(i));
     }
 
     LinkedList<Branch> getBranches() {
@@ -238,18 +226,18 @@ class Bot {
 
 class Branch{
 
-    private ArrayList<Pair<Cell, Cell>> listOfMoves;
+    private ArrayList<Pair<String, String>> listOfMoves;
     private Field lastField;
     private int points = 0;
     private boolean finished = false;
 
-    Branch(ArrayList<Pair<Cell, Cell>> listOfMoves, Field field){
+    Branch(ArrayList<Pair<String, String>> listOfMoves, Field field){
         this.listOfMoves = listOfMoves;
         lastField = field;
         points = 0;
     }
 
-    ArrayList<Pair<Cell, Cell>> getListOfMoves() {
+    ArrayList<Pair<String, String>> getListOfMoves() {
         return listOfMoves;
     }
 
@@ -260,14 +248,14 @@ class Branch{
         return lastField;
     }
 
-    public void setPoints(int points) {
+    void setPoints(int points) {
         this.points = points;
     }
     public int getPoints() {
         return points;
     }
 
-    public void setFinished(){
+    void setFinished(){
         finished = true;
     }
     boolean isFinished(){
@@ -277,16 +265,17 @@ class Branch{
     @Override
     public String toString(){
         StringBuilder str = new StringBuilder();
-        for (Pair<Cell, Cell> move : listOfMoves){
-            str.append(move.getFirst().pos()).append(" -> ").append(move.getSecond().pos()).append("; ");
+        for (Pair<String, String> move : listOfMoves){
+            str.append(move.getFirst()).append(" -> ").append(move.getSecond()).append("; ");
         }
+        str.append("points: ").append(points);
         return str.toString();
     }
 
     Branch copy(){
-        ArrayList<Pair<Cell, Cell>> listOfMoves = new ArrayList<>();
-        for (Pair<Cell, Cell> move : this.listOfMoves){
-            Pair<Cell, Cell> copyMove = new Pair<>(move.getFirst().copy(), move.getSecond().copy());
+        ArrayList<Pair<String, String>> listOfMoves = new ArrayList<>();
+        for (Pair<String, String> move : this.listOfMoves){
+            Pair<String, String> copyMove = new Pair<>(move.getFirst(), move.getSecond());
             listOfMoves.add(copyMove);
         }
         return new Branch(listOfMoves, lastField.copy());
